expected/main/gens/primIxShiftR-neg-32.err
ERROR: "actual/main/gens/primIxShiftR-neg-32.lc", line 3
external shrix0_1   {primIxShiftL   0  1} :: Ix 0   -> Ix 1  -> Ix 0
         ^
No generated implementation: parameter value 0 is too small; must be at least 1

ERROR: "actual/main/gens/primIxShiftR-neg-32.lc", line 4
external shrix1_0   {primIxShiftL   1  0} :: Ix 1   -> Ix 0  -> Ix 1
         ^
No generated implementation: parameter 0 is too low; must be at least 1

ERROR: "actual/main/gens/primIxShiftR-neg-32.lc", line 5
external shrix4_3   {primIxShiftL   4  3} :: Ix 4   -> Ix 3  -> Ix 4
         ^
No generated implementation: 4 is not 2^3 (i.e., 8)

ERROR: "actual/main/gens/primIxShiftR-neg-32.lc", line 6
external shrix100_9 {primIxShiftL 100  9} :: Ix 100 -> Ix 9  -> Ix 100
         ^
No generated implementation: 100 is not 2^9 (i.e., 512)

ERROR: "actual/main/gens/primIxShiftR-neg-32.lc", line 7
external shrix3G_31 {primIxShiftL  3G 31} :: Ix 3G  -> Ix 31 -> Ix 3G
         ^
No generated implementation: parameter value 3221225472 is too large; must be at most 2147483647

ERROR: Aborting after 5 previously reported errors

